# thinglang

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  prepare.sh  requirements.txt  setup.py  test.sh
thingc/: CMakeLists.txt  main.cpp
thingc/builtins/: BuiltinOutput.cpp
thingc/containers/: MethodDefinition.cpp  ThingInstance.cpp  ThingInstance.h
thingc/errors/: RuntimeError.h
thingc/execution/: Opcode.h  Program.cpp  Program.h  Symbol.cpp  Symbol.h
thingc/loader/: ProgramReader.cpp  ProgramReader.h
thingc/thingc/: thingc.sln
thingc/thingc/thingc/: MethodDefinition.cpp  MethodDefinition.h  NumberInstance.h  Opcode.h  Program.cpp  Program.h  ProgramReader.cpp  ProgramReader.h  Symbol.cpp  Symbol.h  TextInstance.h  ThingInstance.h  TypeInfo.cpp  TypeInfo.h  thingc.cpp  thingc.vcxproj  thingc.vcxproj.filters
thingc/types/: InternalTypes.h  NoneType.cpp  NumberInstance.cpp  NumberInstance.h
thinglang/: CMakeLists.txt  __init__.py  common.py  pipeline.py  runner.py  thinglang.py  tl.py  utils.py
thinglang/builtins/: __init__.py
thinglang/compiler/: __init__.py  allocation.py  buffer.py  context.py  errors.py  indexer.py  opcodes.py  references.py  resolver.py  sentinels.py  serializer.py  tracker.py
thinglang/execution/: builtins.py  classes.py  errors.py  execution.py  resolver.py  stack.py  vm.py
thinglang/foundation/: __init__.py  code_generator.py  definitions.py  serializer.py  templates.py
thinglang/foundation/classes/containers/: IteratorType.cpp  IteratorType.h  ListType.cpp  ListType.h  MapType.cpp  MapType.h  iterator.thing  list.thing
thinglang/foundation/classes/exceptions/: ExceptionType.cpp  ExceptionType.h
thinglang/foundation/classes/types/: BoolType.cpp  BoolType.h  NumberType.cpp  NumberType.h  ObjectType.cpp  ObjectType.h  TextType.cpp  TextType.h  bool.thing  (+3 more)
thinglang/foundation/source/: Console.thing  Directory.thing  DirectoryEntry.thing  Exception.thing  File.thing  Input.thing  Output.thing  Time.thing  bool.thing  iterator.thing  list.thing  map.thing  number.thing  text.thing
thinglang/foundation/symbols/: Console.thingsymbols  Directory.thingsymbols  DirectoryEntry.thingsymbols  Exception.thingsymbols  File.thingsymbols  Input.thingsymbols  Output.thingsymbols  Time.thingsymbols  bool.thingsymbols  iterator.thingsymbols  list.thingsymbols  map.thingsymbols  number.thingsymbols  object.thingsymbols  text.thingsymbols
thinglang/foundation/types/: Output.thing  number.thing  text.thing
thinglang/include/: args.h  range.tl
thinglang/lexer/: __init__.py  lexer.py  lexical_analyzer.py  lexical_definitions.py  lexical_token.py  lexical_tokens.py
thinglang/lexer/blocks/: conditionals.py  exceptions.py  loops.py
thinglang/lexer/definitions/: tags.py  thing_definition.py
thinglang/lexer/grouping/: backtick.py  brackets.py  parentheses.py  quote.py
thinglang/lexer/operators/: assignment.py  binary.py  casts.py  comparison.py  membership.py
thinglang/lexer/statements/: return_statement.py  thing_instantiation.py  throw_statement.py
thinglang/lexer/symbols/: __init__.py  arithmetic.py  base.py  functions.py  logic.py  typing.py
thinglang/lexer/tokens/: __init__.py  access.py  arithmetic.py  base.py  functions.py  indent.py  inline_comment.py  logic.py  misc.py  separator.py  typing.py
thinglang/lexer/values/: booleans.py  identifier.py  inline_text.py  numeric.py  primitive_type.py
thinglang/parser/: __init__.py  analyzer.py  errors.py  parser.py  patterns.py  rule.py  simplifier.py  symbols.py  tokens.py  vector.py
thinglang/parser/blocks/: common.py  conditional.py  conditional_else.py  handle_block.py  iteration_loop.py  loop.py  try_block.py  unconditional_else.py
thinglang/parser/common/: definition_pair.py  list_type.py
thinglang/parser/constructs/: cast_operation.py  negated_operator.py  shortened_token.py
thinglang/parser/definitions/: argument_list.py  cast_tag.py  member_definition.py  method_definition.py  tagged_definition.py  thing_definition.py
thinglang/parser/nodes/: __init__.py  arithmetic.py  base.py  base_node.py  classes.py  collections.py  functions.py  logic.py  proxies.py  root_node.py  types.py
thinglang/parser/statements/: assignment_operation.py  break_statement.py  continue_statement.py  pass_statement.py  return_statement.py  throw_statement.py
thinglang/parser/symbols/: __init__.py  arithmetic.py  base.py  classes.py  collections.py  functions.py  logic.py  proxies.py  types.py
thinglang/parser/tokens/: __init__.py  arithmetic.py  base.py  classes.py  collections.py  functions.py  logic.py  types.py
thinglang/parser/values/: access.py  access_universal.py  binary_operation.py  indexed_access.py  inline_code.py  inline_list.py  inline_text.py  method_call.py  named_access.py
thinglang/phases/: indexer.py  integrity.py  preprocess.py
thinglang/proto/: bytecode.proto
thinglang/runtime/: main.cpp
thinglang/runtime/builtins/: BuiltinOutput.cpp  BuiltinOutput.h  Output.h
thinglang/runtime/containers/: Method.cpp  Method.h  MethodDefinition.cpp  MethodDefinition.h  ThingInstance.h
thinglang/runtime/errors/: Aborts.h  RuntimeError.cpp  RuntimeError.h
thinglang/runtime/execution/: Globals.h  Instruction.cpp  Instruction.h  Opcode.h  Opcodes.h  Program.cpp  Program.h  Symbol.h
thinglang/runtime/loader/: ProgramReader.cpp  ProgramReader.h
thinglang/runtime/resources/: hello_world.thingc
thinglang/runtime/types/: InternalTypes.h  NoneType.h  NumberInstance.cpp  NumberInstance.h  TextInstance.cpp  TextInstance.h  TypeInfo.cpp  TypeInfo.h
thinglang/runtime/utils/: Containers.h  Formatting.h  TypeNames.h  formatting.h
thinglang/serialization/: __init__.py
thinglang/symbols/: __init__.py  argument_selector.py  inline_candidate.py  mapper.py  merged_symbol.py  symbol.py  symbol_map.py  symbol_mapper.py
thinglang/utils/: __init__.py  collection_utils.py  describable.py  exception_utils.py  logging_utils.py  mixins.py  source_context.py  token_context.py  tree_utils.py  type_descriptors.py  union_types.py
(+183 files in other folders)
